@@ -47,6 +47,7 @@
 * history: #2517 fixed: statuses were always stored as Offline (Vogel)
 * chat styles: #2518 fixed: text in system messages was overflowing time (Vogel)
 * history: #2527 fixed: correctly sort messages in history (ultr)
+* gui: #2534 fixed: first incoming message was being displayed twice when "Open chat window on new message" option was enabled (beevvy)
 
 +++ version 0.11.1
 * gui: #2464 fixed: Clear Chat button was not properly activated after reading messages from history (Vogel)
